mule-user-guide/v/3.5/hardware-and-software-requirements.adoc
= Hardware and Software Requirements
:keywords: hardware, software, requirements

This page lists the hardware, operating systems, JREs, and other requirements to run Mule ESB, the API Gateway, Mule Management Console, and Anypoint Studio.

== Mule ESB

[cols="30a,70a"]
|===
|*Hardware Requirements* |
* 2GHz, dual-core CPU, or 2 virtual CPUs in virtualized environments
* 2GB free memory available
* 4GB of storage

This list is a recommendation and a starting point. Different applications have different requirements for the amount of latency (and thus raw CPU power) or the size and number of simultaneous messages that applications need to process (which in turn determines the amount of RAM Mule needs). 
|*Software Requirements:*
|
|*Java Runtime Environments* |

* Oracle Java 1.7
|*Operating Systems* |

Mule runs on Oracle Java JRE 1.7. Each Mule release is validated against specific versions of the most widely used operating systems. Because the only mandatory requirement for Mule ESB is Java, Mule ESB should also run on any newer versions of the tested operating systems, as well as any other operating systems supported by the JREs.

The operating systems MuleSoft used to validate the current release are:

* Windows (32- and 64-bit) 2003, 2008, Windows 7, Windows 2012
* Mac OS 10.7, 10.8
* Linux RHEL (64-bit) 5.3, 6.1
* Ubuntu Server 12.04 (64-bit) *
* Solaris OS 10
* HP-UX 11i V3
* AIX V7.1

*If you use SSL, MuleSoft recommends installing Ubuntu Server 12.14 (64-bit) instead of 12.04.
|*Application Servers* a|

The current release of Mule ESB supports the following application servers:

* Eclipse Jetty 8
* JBoss 6.1 (Enterprise)
* JBoss 7 (Community)
* Apache Tomcat 7
* IBM WebSphere 8
* Oracle WebLogic 12c

Additionally, users have reported success deploying Mule ESB with the following application servers:

* Geronimo
|*Java Virtual Machines* a|

The current release of Mule ESB supports this Java Virtual Machine:

* Oracle Hot Spot 7
|*Messaging Platforms* a|

The current release of Mule ESB supports the following messaging platforms:

* Apache ActiveMQ 5.9.0
* IBM WebSphere MQ 7
* Oracle AQ

Additionally, users have reported successful integration via the following messaging platforms:

* Open MQ 
* TIBCO EMS
* TIBCO Rendezvous
* Hornet MQ
|*Database Servers* a|

* Oracle Database11g
* Microsoft SQL Server 2012
* MySQL 5.5
* IBM DB2 10.1
* PostgreSQL 9.6
* Apache Derby 10.9.1.0
|===


== Anypoint Studio

* *Hardware Requirements*

** 3GB of RAM
** 4GB free hard drive space

* *Software Requirements*

** *Java Runtime Environments*

*** Oracle Java 1.7
*** Oracle Java 1.8

** *Operating Systems*

*** Windows (32- and 64-bit) Windows 7, Windows 8
*** Mac OS (32- or 64-bit) 
*** Linux (32- or 64-bit)

== API Gateway

[cols="30a,70a"]
|===
|*Hardware Requirements*
|

* 2GHz, dual-core CPU, or 2 virtual CPUs in virtualized environments
* 2GB of RAM
* 4GB of storage

|*Software Requirements:* |

|*Java Runtime Environments* a|* Oracle Java 1.7

|*Operating Systems* a|The API Gateway runs on Oracle Java JRE 1.7. To ensure this, every API Gateway release is validated against specific versions of the most widely used operating systems. 

This hardware requirements list is a recommendation and a starting point. Different applications have different requirements for the amount of latency (and thus raw CPU power) or the size and number of simultaneous messages that applications need to process (which in turn determines the amount of RAM the API Gateway needs).

The operating systems MuleSoft used to validate the current release are:

* Windows (32- and 64-bit) 2003, 2008, Windows 7, Windows 2012
* Mac OS 10.7, 10.8
* Linux RHEL (64-bit) 5.3, 6.1
* Ubuntu Server 12.04 (64-bit) *
* Solaris OS 10
* HP-UX 11i V3
* AIX V7.1

Because the only mandatory requirement for the API Gateway is Java, the API Gateway should also run on any newer versions of the tested operating systems in the above list, as well as any other operating systems supported by the JRE.

*If you use SSL, MuleSoft recommends installing Ubuntu Server 12.14 (64-bit) instead of 12.04.
|===

== Mule Management Console

[cols="30a,70a"]
|===
|*Hardware Requirements*
|

* 2GHz CPU
* 4 GB of RAM
* 10 GB of storage

|*Software Requirements:* |

|*Java Runtime Environments* a|

* Oracle Java 1.6
* Oracle Java 1.7
* IBM Java 1.6

|*Web Application Servers* a|

* JBoss 6 or 6.1
* Tomcat 6.x or 7.x
* Tcat 6.x or 7.x
* WebSphere Application Server 7.0 and 8.0

|*Operating Systems* |Mule Management Console can run on any operating system supported by one of the above web application servers. We strongly recommend running Mule Management Console on a separate server from the hardware that runs Mule ESB. 

|*Browsers* a|

* Firefox (latest version)
* Chrome (latest version)
* Safari (latest version)
* Internet Explorer 9 or newer
|===

*Compatible Databases for Persisting Data*

* link:/mule-management-console/v/3.5/persisting-mmc-data-to-oracle[Oracle]
* link:/mule-management-console/v/3.5/persisting-mmc-data-to-postgresql[Postgres ]
* link:/mule-management-console/v/3.5/persisting-mmc-data-to-mysql[MySQL]
* link:/mule-management-console/v/3.5/persisting-mmc-data-to-ms-sql-server[MS SQL Server]

Only run Mule Management Console as a web application deployed on a web container such as JBoss or Tomcat, and NOT as a Mule application. We recommend configuring the web application server's memory areas with the following minimum sizes:

*  Heap: 2GB (3GB recommended) 
*  Permanent Generation: 512MB

== Anypoint Studio as Eclipse Plug-in

* *Hardware Requirements*

** 3GB of RAM
** 2GHz CPU
** 4GB free hard drive space

* *Software Requirements*

** *Eclipse*

*** Eclipse 3.8 for Java Developers or Java EE Developers
*** Spring Tool Suite (STS) versions that run on top of Eclipse 3.8

** *Java Runtime Environments*

*** Oracle Java 1.7

** *Operating Systems*

*** Windows (32- or 64-bit) Windows 7, Windows 8
*** Mac OS (32- or 64-bit) 
*** Linux (32- or 64-bit) 

Get more information about installing link:/mule-user-guide/v/3.5/studio-in-eclipse[Studio as an Eclipse plug-in].

== Browsers

API Manager supports the following browsers:

* Firefox (latest)
* Chrome (latest)
* IE 10 and later

CloudHub supports the following browsers:

* Firefox (latest)
* Chrome (latest)
* Safari (latest)
* IE 10 and later

Mule Management Console supports all http://www.gwtproject.org/doc/latest/FAQ_GettingStarted.html#What_browsers_does_GWT_support?[browsers supported by GWT].

== See Also

* Learn how to link:/mule-user-guide/v/3.5/downloading-and-starting-mule-esb[download and Start Mule ESB].
* Learn more about installing an link:/mule-user-guide/v/3.5/installing-an-enterprise-license[Enterprise license].
* link:/mule-fundamentals/v/3.5/first-30-minutes-with-mule[Get started] with Anypoint Studio.
